fixed home responsive layout issues

--- a/public/stylesheets/format.css
+++ b/public/stylesheets/format.css
@@ -6,6 +6,7 @@
   /** NAVIGATION BAR **/
   .nav-top {
     height: 64px;
+    width: 300px;
     border-bottom: 1px solid #d0d0d0;
   }
 
@@ -59,45 +60,10 @@
   .legal-span {
     width: 300px;
   }
-}
-
-@media screen and (min-width:500px) {
-  .mid-block {
-    height: 400px;
-    padding-top: 100px;
-  }
-
-  .wrap {
-    width: 1200px;
-  }
 
   .column {
-    width: 480px;
-  }
-
-  .image {
     width: 300px;
-    height: 700px;
-  }
-
-  .top-500 {
-    margin-top: 450px;
-  }
-  
-  /** NAVIGATION BAR **/
-
-  .nav-top {
-    height: 75px;
-    width: 1200px;
-    border-bottom: 1px #666 solid;
-  }
-
-  .menu {
-    height: 60px;
-  }
-
-  .menu-button {
-    height: 70px;
-    margin-top: 45px;
   }
 }
+
+
