--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,14 +23,18 @@
 }
 
 .mid-block {
+  height: 400px;
+  padding-top: 100px;
   font-size: .9em;
 }
 
 .wrap {
   margin: 0 auto;
+  width: 1200;
 }
 
 .column {
+  width: 480px;
   display: inline-block;
   margin-top: 15px;
   font-size: 1.2em;
@@ -41,6 +45,8 @@
 }
 
 .image {
+  width: 300px;
+  height: 700px;
   background: #EEE;
 }
 
@@ -90,6 +96,9 @@ a {
   opacity: 0.8;
 }
 
+.top-500 {
+    margin-top: 450px;
+  }
 /** NAVIGATION BAR **/
 
 #logo {
@@ -99,6 +108,14 @@ a {
   background-size: 167px 40px;
   background-position: left bottom;
 }
+
+.nav-top {
+    height: 75px;
+    width: 1200px;
+    border-bottom: 1px #666 solid;
+  }
+
+
 
 .nav-top h1 {
   margin: 0;
@@ -110,20 +127,22 @@ a {
 }
 
 .menu {
+  height: 70px;
   float: right;
   clear: right;
-  height: 60px;
   vertical-align: baseline;
 }
 
 .menu-button {
   display: inline-block;
-  height: 70px;
+  margin-top: 40px;
+  height: 25px;
   margin-left: 75px;
   vertical-align: middle;
 }
 
 .menu-button a {
+  height: 60px;
   display: inline-block;
   vertical-align: middle;
   font-size: 15px;
